<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded"
    android:backgroundTint="@color/white"
    android:padding="20dp"
>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/callAnimation"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:lottie_fileName="call.json"
        app:lottie_loop="true"
        app:lottie_speed="1"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView9"
        style="@style/DarkBlue30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/oops"
        android:textFontWeight="700"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/callAnimation" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/number_not_registered_desc"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/getInTouch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:background="@drawable/button_background"
        android:text="@string/get_in_touch"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />


</androidx.constraintlayout.widget.ConstraintLayout>