<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="phoneNumber"
            type="String" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColor"
        tools:context=".ui.auth.EnterPhoneActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_landing_background" />

        <TextView
            android:id="@+id/textView5"
            style="@style/DarkBlue26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:text="@string/welcome"
            android:textFontWeight="700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            style="@style/Grey18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_mobile_number_to_continue"
            android:textAlignment="center"
            android:textFontWeight="500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/request_otp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_background"
            app:backgroundTint="@null"
            android:text="@string/request_otp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_your_phone_number"
            app:errorIconDrawable="@null"
            android:textColorHint="@color/blueOpacity40"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/textFieldBorderColor"
            app:boxStrokeWidth="1.5dp"
            app:boxStrokeWidthFocused="1.5dp"
            app:hintTextColor="@color/blueOpacity40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:errorEnabled="true"

            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_phone_number"
                android:text="@{phoneNumber}"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="10dp"
                android:maxLength="10"
                android:paddingBottom="20dp"
                android:textColorHint="@color/blueOpacity40"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>