<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".ui.auth.EnterOtpActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/enter_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_landing_background" />

    <TextView
        android:id="@+id/enter_otp"
        style="@style/DarkBlue26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/enter_the_otp_received"
        android:textFontWeight="700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_otp_desc"
        style="@style/Grey18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_the_otp_sent_to_your_mobile"
        android:textFontWeight="500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_otp" />

    <TextView
        android:id="@+id/number"
        style="@style/LightBlue18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="+91-9760225557"
        android:textFontWeight="700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_otp_desc" />

    <ImageView
        android:id="@+id/edit"
        android:onClick="onEditClick"
        android:layout_width="13dp"
        android:layout_height="21dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/number"
        app:layout_constraintTop_toBottomOf="@+id/enter_otp_desc"
        app:srcCompat="@drawable/edit" />

    <com.chaos.view.PinView
        android:id="@+id/pinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:cursorVisible="true"
        android:inputType="number"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cursorWidth="2dp"
        app:itemCount="4"
        app:itemHeight="48dp"
        app:itemRadius="10dp"
        app:itemSpacing="15dp"
        app:itemWidth="48dp"
        android:itemBackground="@color/white"
        app:lineColor="@color/textFieldBorderColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number"
        app:lineWidth="1.5dp"
        app:viewType="rectangle" />

    <TextView
        android:id="@+id/textView7"
        style="@style/BlueOpactity60font18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/didnot_receive_an_otp"
        app:layout_constraintEnd_toStartOf="@+id/otpTimer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinView" />

    <TextView
        android:id="@+id/otpTimer"
        style="@style/DarkBlue16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="01:00"
        android:textFontWeight="700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>